fix: text center on mobile banner

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -308,6 +308,7 @@ section#banner {
 @media screen and (max-width: 500px) {
   section#banner p {
     padding: 0 2rem 0 2rem;
+    text-align: center;
   }
 }
 
